Terraform/tf-aws-iac/modules/security_group/main.tf
# This module provisions a security group inside the VPC
# that controlls inboud and outbound traffic
resource "aws_security_group" "my_security_group" {
  name = var.security_group_name
  description = var.security_group_description
  vpc_id = var.vpc_id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = [ "0.0.0.0/0" ]
  }

  tags = {
    Name = var.security_group_name
  }
}
